data/derived/sp14/progs/unify/prog2277.ml.out
Characters 23-24:
  eval(Sine(VarY), 11.0 ,0);;
                         ^
Error: This expression has type int but an expression was expected of type
         float
